--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:animateLayoutChanges="true"
     android:padding="@dimen/doub_grid_size"
-    tools:context=".MainActivity">
+    tools:context="org.kimp.witelokk.museum.app.MainActivity">
 
     <TextView
         android:id="@+id/title"
