--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,6 @@
 <resources>
     <dimen name="base_grid_size">8dp</dimen>
     <dimen name="doub_grid_size">16dp</dimen>
+
+    <dimen name="card_corner_size">30dp</dimen>
 </resources>
