--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -49,6 +49,7 @@
             android:text="0" />
 
         <com.google.android.material.button.MaterialButton
+            android:id="@+id/mf_first_floor_btn"
             style="@style/Widget.Material3.Button.OutlinedButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -56,6 +57,7 @@
             android:text="1" />
 
         <com.google.android.material.button.MaterialButton
+            android:id="@+id/mf_second_floor_btn"
             style="@style/Widget.Material3.Button.OutlinedButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -63,6 +65,7 @@
             android:text="2" />
 
         <com.google.android.material.button.MaterialButton
+            android:id="@+id/mf_third_floor_btn"
             style="@style/Widget.Material3.Button.OutlinedButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
