--- a/app/src/main/res/layout/fragment_quest.xml
+++ b/app/src/main/res/layout/fragment_quest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,7 +7,42 @@
     tools:context=".ui.fragments.QuestFragment">
 
     <com.synnapps.carouselview.CarouselView
+        android:id="@+id/qf_questions_carousel"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="@dimen/base_grid_size"
+        app:layout_constraintBottom_toTopOf="@id/qf_menu_lay" />
 
-</FrameLayout>
+    <LinearLayout
+        android:id="@+id/qf_menu_lay"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/qf_back_btn"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginEnd="@dimen/base_grid_size"
+            app:icon="@drawable/ic_baseline_arrow_back_24"
+            app:iconGravity="start"
+            style="@style/Widget.Material3.Button.ElevatedButton.Icon"/>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/qf_map_btn"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="6"
+            android:text="@string/mf_map_btn_msg"
+            style="@style/Widget.Material3.Button.ElevatedButton"/>
+
+    </LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
